--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "greeter-bot",
-  "version": "1.0.0",
-  "description": "My own Discord bot",
+  "name": "Test",
+  "description": "Test",
+  "version": "0.0.0",
   "main": "bot.js",
-  "author": "Alvin",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "discord.io": "^2.5.3",
+    "discord.js": "11.1.0",
+    "request": "2.81.0",
     "winston": "^2.4.1"
   }
 }
